세션 2 과제 폴더링 + 토스 링크색 수정 및 인스타 form 추가

--- a/Session2_HW/Toss_Clone/Toss_Clone.css
+++ b/Session2_HW/Toss_Clone/Toss_Clone.css
@@ -22,6 +22,11 @@
     font-weight: bold;
 }
 
+.description a {
+    text-decoration: none;
+    color:#58A6FF;
+}
+
 .block_wrapper {
     
     display: flex;
