--- a/Session2_HW/Insta_Clone/Instagram_m_Clone2.css
+++ b/Session2_HW/Insta_Clone/Instagram_m_Clone2.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     width: 400px;
+    height: 687.44px;
     box-shadow:
     0 30px 60px 12px rgba(0, 0, 33, 0.05),
     0 4px 24px 0 rgba(0, 0, 33, 0.05),
@@ -127,59 +128,63 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 0 0 10px 0;
+    padding: 0 0 1px 0;
+}
+
+button {
+    border: none;
+    background-color: white;
+
+}
+
+.underline {
+    border-bottom: lightgray solid 1px;
+    width: 33%;
+    display: flex;
+    justify-content: center;
+}
+
+.current {
+    border-bottom: black solid 2px;
 }
 
 .icon_bar img {
     width: 25px;
     height: 25px;
+    margin-bottom: 5px;
+    filter: invert(73%) sepia(0%) saturate(2246%) hue-rotate(273deg) brightness(98%) contrast(73%);
+}
+
+#now {
+    filter: invert(0%) sepia(0%) saturate(7500%) hue-rotate(59deg) brightness(100%) contrast(105%);
 }
 
 /* content bar */
 .content_bar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    height: 132px;
     /* padding: 0 0 10px 0; */
 }
 
 .first_pic {
-    width: 33%;
-    height: 132px;
-    background-image: url("https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/c0.180.1440.1440a/s640x640/165853575_870911390136946_1788982911801577829_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=110&_nc_ohc=hJYKHXmM3vIAX_yK_QN&ccb=7-4&oh=235c7e780e97c00c167591187c80a814&oe=608959EC&_nc_sid=7bff83");
-    background-size: contain;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-}
-
-.first_pic img {
-    width: 20px;
-    height: 20px;
-    margin: 5px 5px 0 0;
+    width: 49%;
+    background-image: url("https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-15/e35/147051033_266298011531813_1977577242913261074_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=105&_nc_ohc=mLmhC9mHVpcAX-figy6&ccb=7-4&oh=25e9a3548f31c193083eb2541a0c922f&oe=606278C6&_nc_sid=86f79a");
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .second_pic {
-    width: 33%;
-    height: 132px;
-    background-image: url("https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/c0.90.720.720a/s640x640/163967214_3728896297193739_3038191648631729975_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=103&_nc_ohc=X_5IBJQqKbEAX-7Espp&ccb=7-4&oh=21272cc8209830cacd1667fe01d4ed02&oe=60622725&_nc_sid=7bff83");
-    background-size: contain;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
+    width: 49%;
+    background-image: url("https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-15/e35/131403151_218340386626013_3716053634044377138_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=105&_nc_ohc=bxra00dWu0MAX95Gpo7&ccb=7-4&oh=233f076537aca6f3423d6ac9545be644&oe=6062DE37&_nc_sid=7bff83");
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
-.second_pic img {
-    width: 30px;
-    height: 30px;
-    /* margin: 5px 0 0 0; */
-}
-
-.third_pic {
-    width: 33%;
-    height: 132px;
-    background-image: url("https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/s640x640/161448682_157355816144673_1710650004023336096_n.jpg?tp=1&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=109&_nc_ohc=Vbl7CGdyuccAX8ZRfjF&ccb=7-4&oh=f0f1c59469e200458fc5bd975e22e14b&oe=6088233E&_nc_sid=7bff83");
-    background-size: contain;
-}
 
 /* shift_bar */
 
